--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,15 @@
 	font-family: "TypeWriter";
 	src: url("./assets/TravelingTypewriter.ttf") format("truetype");
 }
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 body {
-	margin: 0;
-	font-family: "TypeWriter";
+	margin: 0rem !important;
+	/* font-family: "TypeWriter"; */
+	font-family: "Righteous", cursive;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background-color: #f4f9f4;
 }
 
 h1 {
@@ -20,4 +23,257 @@ th {
 }
 td {
 	font-weight: 600;
+}
+
+.main {
+	margin-left: 5.5rem !important;
+}
+
+.qr {
+	padding: 30px;
+	border-radius: 20px;
+	border-width: 30px;
+	border-color: #00565e;
+}
+
+.qr section div {
+	box-shadow: unset !important;
+}
+
+.navbar {
+	width: 5rem;
+	/* margin-top: -1.5rem; */
+	background-color: #00909e;
+	height: 100vh;
+	position: fixed;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-items: flex-start;
+	justify-content: space-evenly;
+	transition: 250ms ease-out;
+}
+.icon {
+	font-size: 30px;
+	color: #fff;
+}
+
+.li {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 0rem;
+	width: 100%;
+	text-decoration: none;
+}
+.li > h6 {
+	font-size: 0.9em;
+	color: #fff;
+	margin: 0.5rem;
+}
+
+.selected {
+	background-color: #00565e;
+	height: 8rem;
+	display: flex;
+	transition: 250ms ease-out;
+	justify-content: center;
+}
+
+.selected > .icon,
+.selected > h6 {
+	color: #ffffff;
+}
+
+.row {
+	display: flex;
+	padding-top: 3vh;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.blueCard {
+	background-color: #142850;
+	padding: 15px 25px;
+	padding-top: 0px;
+	width: max-content;
+	height: max-content;
+	color: #7d8c9c;
+	text-align: left;
+	/* width: 35vw; */
+	transition: 250ms ease-out;
+}
+#loginForm {
+	width: 60%;
+}
+
+.row > .blueCard {
+	width: 15vw;
+	margin: 20px;
+}
+
+.fl-row {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.fl {
+	float: right;
+	position: relative;
+	background-color: #f4f9f4;
+	height: 70px;
+	width: 70px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 50%;
+	padding: 0px;
+	margin: 0px;
+	margin-right: -65px;
+}
+
+.fl-ico {
+	font-size: 30px;
+	color: #142850;
+}
+
+button > div {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0% 20px;
+}
+
+.blueCard > .fl-row > h3 {
+	border-style: none none none solid;
+	border-left-width: 5px;
+	padding: 7px 10px;
+	font-size: 1.5em;
+	margin-left: -23px;
+	color: #f4f9f4;
+	text-align: center;
+}
+h4 {
+	color: #f4f9f4;
+}
+
+input[type="text"]:focus {
+	border-style: none none solid none;
+	border-bottom-width: 5px;
+	border-bottom-color: white;
+}
+
+button {
+	background: transparent;
+	border: solid #27496d;
+	border-color: inherit;
+	font-family: inherit;
+	color: #f4f9f4;
+	outline: none;
+	width: 30%;
+	margin: 1vh;
+}
+
+button:hover {
+	cursor: pointer;
+}
+
+input[type="text"] {
+	background: transparent;
+	color: #fff;
+	font-size: 20px;
+	height: 3vh;
+	font-family: inherit;
+	outline: none !important;
+	border-style: none none solid none;
+	border-bottom-width: 1px;
+	border-bottom-color: white;
+	width: 100%;
+}
+
+select {
+	background: #142850;
+	color: #fff;
+	font-family: inherit;
+	font-size: 20px;
+	width: 100%;
+	outline: none !important;
+	/* padding: 10px 20px */
+	border: 2px solid #fff;
+}
+
+/* input[type="radio"]:checked ~ .check {
+	border: 5px solid #0dff92;
+}
+
+input[type="radio"]:checked ~ .check::before {
+	background: #0dff92;
+}
+
+input[type="radio"]:checked ~ label {
+	color: #0dff92;
+} */
+
+.disabled {
+	opacity: 0.5;
+}
+.disabled:hover {
+	cursor: default;
+}
+.enabled {
+	opacity: 1;
+}
+.enabled:hover {
+	cursor: pointer;
+}
+h4 > span {
+	color: #6e8297;
+}
+
+@media (max-width: 840px) {
+	.navbar {
+		flex-direction: row;
+		padding: 0px;
+		width: 100%;
+		height: 4rem;
+		margin-top: -5.5rem;
+		align-items: center;
+		justify-items: center;
+	}
+	.main {
+		margin-left: 0rem !important;
+		margin-top: 5.5rem;
+	}
+	.icon {
+		font-size: 25px;
+	}
+	.active > h6 {
+		margin: 0rem;
+	}
+	.selected {
+		height: 4rem;
+	}
+	.blueCard {
+		width: 95%;
+	}
+	.fl {
+		margin-right: -50px;
+	}
+	h2 {
+		font-size: 15px;
+	}
+	button > div {
+		padding: 0 0;
+	}
+	.row > .blueCard {
+		width: 80%;
+	}
+	button {
+		width: 70%;
+	}
+	#loginForm {
+		width: 80%;
+	}
 }
